syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "CurVehicleInfo.proto";
import "SceneReliquaryInfo.proto";
import "ServerBuff.proto";
import "AvatarExcelInfo.proto";
import "SceneWeaponInfo.proto";


message SceneAvatarInfo {
	uint64 guid = 3;
	uint32 wearing_flycloak_id = 17;
	uint32 born_time = 18;
	uint32 core_proud_skill_level = 11;
	uint32 trace_effect_id = 23;
	uint32 weapon_skin_id = 24;
	uint32 peer_id = 4;
	uint32 anim_hash = 22;
	uint32 skill_depot_id = 6;
	uint32 costume_id = 19;
	uint32 avatar_id = 2;
	uint32 uid = 1;
	AvatarExcelInfo excel_info = 21;
	CurVehicleInfo cur_vehicle_info = 20;
	SceneWeaponInfo weapon = 8;
	repeated uint32 equip_id_list = 5;
	repeated uint32 team_resonance_list = 16;
	repeated uint32 inherent_proud_skill_list = 12;
	repeated uint32 talent_id_list = 7;
	repeated SceneReliquaryInfo reliquary_list = 9;
	repeated ServerBuff server_buff_list = 15;
	map<uint32, uint32> proud_skill_extra_level_map = 14;
	map<uint32, uint32> skill_level_map = 13;
}